[K21] Strand of the Ancients, thnk to Feanordev, bwsrv, Ankso, kero99, selector and myself for modding a little to fit core

--- a/VC90/90ScriptDev2.vcproj
+++ b/VC90/90ScriptDev2.vcproj
@@ -407,6 +407,10 @@
 					RelativePath="..\scripts\battlegrounds\battleground.cpp"
 					>
 				</File>
+                <File
+					RelativePath="..\scripts\battlegrounds\battlegroundSA.cpp"
+					>
+                </File>
 				<Filter
 					Name="alterac_valley"
 					>
